src/definitions/elements/button.less
/* ... */
/*-------------------
        Sizes
--------------------*/

.ui.buttons .button,
.ui.buttons .or,
.ui.button {
  font-size: @medium;
}

& when not (@variationButtonSizes = false) {
  each(@variationButtonSizes, {
    @s: @@value;
    .ui.@{value}.buttons .dropdown,
    .ui.@{value}.buttons .dropdown .menu > .item,
    .ui.@{value}.buttons .button,
    .ui.@{value}.buttons .or,
    .ui.ui.ui.ui.@{value}.button {
      font-size: @s;
    }
  })
}

/*--------------
    Icon Only
---------------*/

.ui.icon.buttons .button,
.ui.icon.button:not(.animated) {
  padding: @verticalPadding @verticalPadding ( @verticalPadding + @shadowOffset );
}
.ui.animated.icon.button > .content > .icon,
.ui.icon.buttons .button > .icon,
.ui.icon.button > .icon {
  opacity: @iconButtonOpacity;
  margin: 0 !important;
  vertical-align: top;
}
.ui.animated.button > .content > .icon {
  vertical-align: top;
}

& when (@variationButtonBasic) {
  /*-------------------
          Basic
  --------------------*/

  .ui.basic.buttons .button,
  .ui.basic.button {
    background: @basicBackground;
    color: @basicTextColor;
    font-weight: @basicFontWeight;
    border-radius: @basicBorderRadius;
    text-transform: @basicTextTransform;
    text-shadow: none !important;
    box-shadow: @basicBoxShadow;
  }

  .ui.basic.buttons {
    box-shadow: @basicGroupBoxShadow;
    border: @basicGroupBorder;
    border-radius: @borderRadius;
  }

  .ui.basic.buttons .button {
    border-radius: 0;
  }

  .ui.basic.buttons .button:hover,
  .ui.basic.button:hover {
    background: @basicHoverBackground;
    color: @basicHoverTextColor;
    box-shadow: @basicHoverBoxShadow;
  }

  .ui.basic.buttons .button:focus,
  .ui.basic.button:focus {
    background: @basicFocusBackground;
    color: @basicFocusTextColor;
    box-shadow: @basicFocusBoxShadow;
  }

  .ui.basic.buttons .button:active,
  .ui.basic.button:active {
    background: @basicDownBackground;
    color: @basicDownTextColor;
    box-shadow: @basicDownBoxShadow;
  }

  .ui.basic.buttons .active.button,
  .ui.basic.active.button {
    background: @basicActiveBackground;
    box-shadow: @basicActiveBoxShadow;
    color: @basicActiveTextColor;
  }

  .ui.basic.buttons .active.button:hover,
  .ui.basic.active.button:hover {
    background-color: @transparentBlack;
  }

  /* Vertical */
  .ui.basic.buttons .button:hover {
    box-shadow: @basicHoverBoxShadow inset;
  }

  .ui.basic.buttons .button:active {
    box-shadow: @basicDownBoxShadow inset;
  }

  .ui.basic.buttons .active.button {
    box-shadow: @basicActiveBoxShadow;
  }
  & when (@variationButtonInverted) {
    /* Standard Basic Inverted */

    .ui.basic.inverted.buttons .button,
    .ui.basic.inverted.button {
      background-color: transparent;
      color: @offWhite;
      box-shadow: @basicInvertedBoxShadow;
    }

    .ui.basic.inverted.buttons .button:hover,
    .ui.basic.inverted.button:hover {
      color: @white;
      box-shadow: @basicInvertedHoverBoxShadow;
    }

    .ui.basic.inverted.buttons .button:focus,
    .ui.basic.inverted.button:focus {
      color: @white;
      box-shadow: @basicInvertedFocusBoxShadow;
    }

    .ui.basic.inverted.buttons .button:active,
    .ui.basic.inverted.button:active {
      background-color: @transparentWhite;
      color: @white;
      box-shadow: @basicInvertedDownBoxShadow;
    }

    .ui.basic.inverted.buttons .active.button,
    .ui.basic.inverted.active.button {
      background-color: @transparentWhite;
      color: @invertedTextColor;
      text-shadow: @invertedTextShadow;
      box-shadow: @basicInvertedActiveBoxShadow;
    }

    .ui.basic.inverted.buttons .active.button:hover,
    .ui.basic.inverted.active.button:hover {
      background-color: @strongTransparentWhite;
      box-shadow: @basicInvertedHoverBoxShadow;
    }
  }

  & when (@variationButtonBasic) {
    /* Basic Group */
    .ui.basic.buttons .button {
      border-left: @basicGroupBorder;
      box-shadow: none;
    }

    .ui.basic.vertical.buttons .button {
      border-left: none;
      border-left-width: 0;
      border-top: @basicGroupBorder;
    }

    .ui.basic.vertical.buttons .button:first-child {
      border-top-width: 0;
    }
  }
}
/* ... */

